Skill section modification

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <script src="../src/onscroll-effect.es6.js"></script>
     </head>
     <body data-bs-spy="scroll" data-bs-target="#navbar">
@@ -83,19 +86,29 @@
         </div>
         <!------------------------------------------------------------------------------------------------------------------------------->
         <div id="skills">
-
+        <div class="skill-note">
+          Among the multiple things I worked on, here are a few of my skills mentioned below.
+        </div>  
+        <div class="cards">
         <div class="row row-cols-1 row-cols-md-3 g-4 row-custom">
           <div class="col">
             <div class="card h-100 card-custom">
               
               <div class="card-body ">
-                <h5 class="card-title">Languages</h5>
-                <h6>C</h6>
-                <h6>C++</h6>
-                <h6>Python</h6>
-                <h6>Java</h6>
-                <h6>JavaScript</h6>
-                <h6>SQL</h6>
+                <h3 class="card-title">Languages</h5>
+                <!-- <h6>C</h6>
+                <h6>C++</h6> -->
+                <h5>Python</h5>
+                <div class="desc">
+                (Python is a high level programming language which I used in some web frameworks like Django and Flashk. Python has a very wide range of libraries, some of which are used in Data analysis like <b>NumPY</b> and <b>Pandas</b>.)                <!-- <h6>Java</h6> -->
+                </div>
+                <br>
+                <h5>JavaScript</h5>
+                <div class="desc">
+                (A popular programming language which I use in web framworks like Node.js, Express.js etc. JavaScript is used for the backend of the website and alongside HTML and CSS for the frontend.)
+              </div>
+                <!-- <h6>HTML and CSS</h6>
+                <h6>SQL</h6> -->
               </div>
             </div>
           </div>
@@ -104,16 +117,21 @@
               
               <div class="card-body ">
                 <h3 class="card-title">Technologies</h3>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <h6>langaguafeadfaf</h6>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
+                <h5>Backend</h5>
+                <!-- <div class="card-body card card-custom"> -->
+                  <h6>Node.js</h6>
+                  <h6>Express.js</h6>
+                  
+                  <!-- <h6>Flask</h6>
+                  <h6>Django</h6> -->
+                <!-- </div> -->
+                <h5>Frontend</h5>
+                <h6>Next.js</h6>
+                <h6>React</h6>
+                <h5>Database</h5>
+                <h6>MongoDB</h6>
+                <h6>SQL</h6>
+               </div>
               
             </div>
           </div>
@@ -122,11 +140,20 @@
               
               <div class="card-body">
                 <h5 class="card-title">Tools</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h6>VMWare ESXi</h6>
+                <div class="desc">(VMWare ESXi is a hypervisor which helps in deploying and using Virtual Desktops.)</div>
+                <h6>PRTG</h6>
+                <div class="desc">(PRTG is a monnitoring tool used for Monitoring machines in infrastructure support.)</div>
+                <h6>KACE</h6>
+                <div class="desc">(KACE is a software distribution tool provided by Quest to manage and deploy application to mass number of machines.)</div>
+                <h6>Acronis</h6>
+                <div class="desc">(Acronis is used to manage the backup of the devices and also can be used to restore the machines with the stored backups.)</div>
+                <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
               </div>
               
             </div>
           </div>
+        </div>
         </div>
       </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
@@ -343,13 +370,13 @@
             </div>
           </form> -->
       <div class="social">
-        <a href="mailto: subodhkumar321.1@gmail.com">
-          <img src="../src/images/gmail.png"></a>
+        <a href="mailto: subodhkumar321.1@gmail.com" target=”_blank”>
+          <img src="../src/images/gmail.png" ></a>
         </a> 
-        <a href="https://www.linkedin.com/in/iamhkmehta/">
+        <a href="https://www.linkedin.com/in/iamhkmehta/" target=”_blank”>
           <img src="../src/images/linkedin.png">
         </a>
-        <a href="https://github.com/himcode">
+        <a href="https://github.com/himcode" target=”_blank”>
           <img src="../src/images/github.png">
         </a>
       </div>
