--- a/src/style.css
+++ b/src/style.css
@@ -155,19 +155,42 @@ body {
 }
 
 #skills {
+    
     height:95vh;
     display: flex;
     flex-direction: column;
     align-self: center;
     align-items: center;
-    flex-direction: row;
+    /* flex-direction: row; */
+}
+
+.skill-note{
+  margin-top: 5vh;
+  height: 20vh;  
+  width: auto;
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+}
+.cards{
+  display: flex;
+  flex-direction: row;
 }
 
 .card-custom{
     
     box-shadow: 10px 10px 5px gray;
     background-color: rgb(152, 248, 187);
+    width: 30vw;
+    font-size: large;
 
+}
+.desc{  
+  font-family: 'Dancing Script', cursive;
+  font-weight: 500;
+  font-size: larger;
 }
 
 .card {
@@ -223,6 +246,8 @@ h1.title{
 .btn{
   background-color: #3ea0e0;
   margin-top: 10vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
