Image changed, Ready to host

--- a/views/index.html
+++ b/views/index.html
@@ -90,89 +90,92 @@
           Among the multiple things I worked on, here are a few of my skills mentioned below.
         </div>  
         <div class="cards">
-        <div class="row row-cols-1 row-cols-md-3 g-4 row-custom">
-          <div class="col">
-            <div class="card h-100 card-custom">
-              
-              <div class="card-body ">
-                <h3 class="card-title">Languages</h5>
-                <!-- <h6>C</h6>
-                <h6>C++</h6> -->
-                <h5>Python</h5>
-                <div class="desc">
-                (Python is a high level programming language which I used in some web frameworks like Django and Flashk. Python has a very wide range of libraries, some of which are used in Data analysis like <b>NumPY</b> and <b>Pandas</b>.)                <!-- <h6>Java</h6> -->
+          <div class="row row-cols-1 row-cols-md-3 g-4 row-custom">
+            <div class="col">
+              <div class="card h-100 card-custom">
+                
+                <div class="card-body ">
+                  <h3 class="card-title">Languages</h5>
+                    <!-- <h6>C</h6>
+                      <h6>C++</h6> -->
+                      <h5>Python</h5>
+                      <div class="desc">
+                        (Python is a high level programming language which I used in some web frameworks like Django and Flashk. Python has a very wide range of libraries, some of which are used in Data analysis like <b>NumPY</b> and <b>Pandas</b>.)                <!-- <h6>Java</h6> -->
                 </div>
                 <br>
                 <h5>JavaScript</h5>
                 <div class="desc">
-                (A popular programming language which I use in web framworks like Node.js, Express.js etc. JavaScript is used for the backend of the website and alongside HTML and CSS for the frontend.)
-              </div>
+                  (A popular programming language which I use in web framworks like Node.js, Express.js etc. JavaScript is used for the backend of the website and alongside HTML and CSS for the frontend.)
+                </div>
                 <!-- <h6>HTML and CSS</h6>
-                <h6>SQL</h6> -->
+                  <h6>SQL</h6> -->
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <div class="card h-100 card-custom">
-              
-              <div class="card-body ">
-                <h3 class="card-title">Technologies</h3>
-                <h5>Backend</h5>
-                <!-- <div class="card-body card card-custom"> -->
-                  <h6>Node.js</h6>
-                  <h6>Express.js</h6>
-                  
+            <div class="col">
+              <div class="card h-100 card-custom">
+                
+                <div class="card-body ">
+                  <h3 class="card-title">Technologies</h3>
+                  <h5>Backend</h5>
+                  <!-- <div class="card-body card card-custom"> -->
+                    <h6>Node.js</h6>
+                    <h6>Express.js</h6>
+                    
                   <!-- <h6>Flask</h6>
                   <h6>Django</h6> -->
-                <!-- </div> -->
-                <h5>Frontend</h5>
-                <h6>Next.js</h6>
-                <h6>React</h6>
-                <h5>Database</h5>
-                <h6>MongoDB</h6>
-                <h6>SQL</h6>
-               </div>
-              
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100 card-custom">
-              
-              <div class="card-body">
-                <h5 class="card-title">Tools</h5>
-                <h6>VMWare ESXi</h6>
-                <div class="desc">(VMWare ESXi is a hypervisor which helps in deploying and using Virtual Desktops.)</div>
-                <h6>PRTG</h6>
-                <div class="desc">(PRTG is a monnitoring tool used for Monitoring machines in infrastructure support.)</div>
-                <h6>KACE</h6>
-                <div class="desc">(KACE is a software distribution tool provided by Quest to manage and deploy application to mass number of machines.)</div>
-                <h6>Acronis</h6>
-                <div class="desc">(Acronis is used to manage the backup of the devices and also can be used to restore the machines with the stored backups.)</div>
-                <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
+                  <!-- </div> -->
+                  <h5>Frontend</h5>
+                  <h6>Next.js</h6>
+                  <h6>React</h6>
+                  <h5>Database</h5>
+                  <h6>MongoDB</h6>
+                  <h6>SQL</h6>
+                </div>
+                
               </div>
-              
+            </div>
+            <div class="col">
+              <div class="card h-100 card-custom">
+                
+                <div class="card-body">
+                  <h5 class="card-title">Tools</h5>
+                  <h6>VMWare ESXi</h6>
+                  <div class="desc">(VMWare ESXi is a hypervisor which helps in deploying and using Virtual Desktops.)</div>
+                  <h6>PRTG</h6>
+                  <div class="desc">(PRTG is a monnitoring tool used for Monitoring machines in infrastructure support.)</div>
+                  <h6>KACE</h6>
+                  <div class="desc">(KACE is a software distribution tool provided by Quest to manage and deploy application to mass number of machines.)</div>
+                  <h6>Acronis</h6>
+                  <div class="desc">(Acronis is used to manage the backup of the devices and also can be used to restore the machines with the stored backups.)</div>
+                  <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
+                </div>
+                
+              </div>
             </div>
           </div>
         </div>
+        <div class="skill-note">
+          Check out my&nbsp;<a href="https://www.hackerrank.com/subodhkumar321_1?hr_r=1">HackerRank Profile.</a>
         </div>
       </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
         <div id="experience">
           <section>
-          <h1 class="title">Experience</h1>
-          
-          <div class="exp">
-            <h1 class="exp-title">
-              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
-              Accenture Solutions Private Limited
-            </div>
-            </h1>
-            <h4 class="exp-subheading">
-              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Packaged App Development Analyst</div>
-            </h4>
-            <h6 class="location">
-              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Feb 2023 - Current | Gurugram, India</div>
-            </h6>
+            <h1 class="title">Experience</h1>
+            
+            <div class="exp">
+              <h1 class="exp-title">
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  Accenture Solutions Private Limited
+                </div>
+              </h1>
+              <h4 class="exp-subheading">
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Packaged App Development Analyst</div>
+              </h4>
+              <h6 class="location">
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Feb 2023 - Current | Gurugram, India</div>
+              </h6>
             <div>
               <ul>
                 <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
