--- a/src/style.css
+++ b/src/style.css
@@ -172,7 +172,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: larger;
+  font-size: 30px;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .cards{
   display: flex;
